# aw-watcher-steam

./: LICENSE  Pipfile  README.md  pyproject.toml
aw-watcher-steam/: main.py
aw_watcher_steam/: __main__.py  main.py
