[tool.poetry]
name = "aw-watcher-steam"
version = "0.0.1"
description = "Steam watcher for ActivitiyWatch"
authors = ["Edward <edwardsoen@gmail.com>"]
packages = [{include = "aw_watcher_steam"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
aw-client = "^0.5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aw-watcher-steam = "aw_watcher_steam:main"